# code_crew

./: .env  .env.example  .gitignore  PROJECT_IMPLEMENTATION.md  README.md  pyproject.toml
src/code_crew/: crew.py  main.py
src/code_crew/config/: agents.yaml  tasks.yaml
src/code_crew/tools/: __init__.py  custom_tool.py
