[project]
name = "code_crew"
version = "0.1.0"
description = "code_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.11.1",
]

[project.scripts]
code_crew = "code_crew.main:run"
run_crew = "code_crew.main:run"
train = "code_crew.main:train"
replay = "code_crew.main:replay"
test = "code_crew.main:test"
run_with_trigger = "code_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
